# data-import-and-export-challenge-python

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  playground.ipynb  pyproject.toml  requirements.txt
data/input/: clientes.csv
scripts/: generate_sample_data.py
src/: customer_statuses.py  data_processor.py  db.sql
