[project]
name = "data-import-and-export-challenge-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker==37.4.0",
    "ipykernel>=6.29.5",
    "pandas==2.3.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.41",
]
